tests/cases/standard-library/ok/prelude/std-prelude-unqualified.ari
use std as core;

fn span_score() -> i64 {
  let span: Range[i64] = core::iter::range(1, 4);
  var total = span.start + span.end;

  for value in span {
    total = total + value;
  }

  return total;
}

fn main() -> i64 {
  let values: Vec[i64] = [2, 3, 4];
  var memory = create(128);
  let slot = new<i64>(ref mut memory, 9);
  let copied = ptr_load(slot);
  destroy(memory);
  return values[1] + span_score() + size_of<i64>() + core::mem::align_of<i64>() + copied;
}
