tests/cases/standard-library/errors/algo/std-algo-copy-own.ari
// Covers the current algorithm value contract: raw element copy is not a
// move-aware transfer for ownership-carrying aggregate elements.

struct Holder {
  token: own i64,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var target = [Holder { token: make_owned(1) }, Holder { token: make_owned(2) }];
  var source = [Holder { token: make_owned(3) }, Holder { token: make_owned(4) }];
  let copied = std::algo::copy<Holder>(target.as_slice(), source.as_slice());
  drop target;
  drop source;
  return copied;
}
